header text alignment issue resolved

--- a/src/pages/AboutUs.module.css
+++ b/src/pages/AboutUs.module.css
@@ -27,7 +27,8 @@
 .image_text_container {
   position: absolute;
   top: 150px;
-  left: 20vw;
+  left: 50%;
+  transform: translate(-50%, 0%);
   z-index: 1;
   text-transform: uppercase;
   color: white;
@@ -365,7 +366,8 @@
   .image_text_container {
     position: absolute;
     top: 10%;
-    left: 5vw;
+    left: 50%;
+    transform: translate(-50%, 0%);
     z-index: 1;
     text-transform: uppercase;
     color: white;
@@ -668,7 +670,8 @@
   .image_text_container {
     position: absolute;
     top: 50px;
-    left: 5%;
+    left: 50%;
+    transform: translate(-50%, 0%);
     z-index: 1;
     text-transform: uppercase;
     color: white;
