--- a/src/pages/HomeOne.module.css
+++ b/src/pages/HomeOne.module.css
@@ -27,7 +27,9 @@
 .image_text_container {
   position: absolute;
   top: 150px;
-  right: 30vw;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  text-align: center;
   z-index: 1;
   max-width: 500px;
   text-transform: uppercase;
@@ -49,7 +51,7 @@
 .image_text {
   background-color: rgba(0, 0, 0, 0.3);
   color: #ffffff;
-  padding: 30px;
+  margin: 0 auto 0 auto;
   display: inline-block;
 }
 
@@ -265,9 +267,9 @@
   .image_text_container {
     position: absolute;
     top: 12%;
-    left: 20vw;
-    margin-left: auto;
-    margin-right: auto;
+    left: 50%;
+    transform: translate(-50%, 0%);
+    text-align: center;
     z-index: 1;
     max-width: 300px;
     text-transform: uppercase;
@@ -441,12 +443,6 @@
 }
 
 @media (max-width: 425px) {
-  /* .down_arrow {
-    height: 20px;
-    width: 20px;
-    margin: 30px auto 0 35%;
-  } */
-
   .mission {
     height: 100vh;
     width: 100%;
@@ -508,12 +504,6 @@
 }
 
 @media (max-width: 385px) {
-  /* .down_arrow {
-    height: 20px;
-    width: 20px;
-    margin: 30px auto 0 35%;
-  } */
-
   .mission .missiontext_container .left {
     grid-row: 1/2;
     justify-content: left;
